{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 201,
  "lineage": "38984ca7-ea41-21e6-d8b1-c3be16a063aa",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-24T13:31:20.904-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-339001/global/firewalls/tf-fw-allow-http",
            "log_config": [],
            "name": "tf-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/test-339001/global/networks/default",
            "priority": 1000,
            "project": "test-339001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-339001/global/firewalls/tf-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-01-24T13:31:21.130-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-339001/global/firewalls/tf-fw-allow-ssh",
            "log_config": [],
            "name": "tf-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/test-339001/global/networks/default",
            "priority": 1000,
            "project": "test-339001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-339001/global/firewalls/tf-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm-linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20211212",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/test-339001/zones/us-central1-a/disks/vm-linux"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/test-339001/zones/us-central1-a/instances/vm-linux",
            "instance_id": "7928134753994318917",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "ansible:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC6ACKfD8pAtuRCBI7LKBZkRj0Scn0Bx6U9JK05ykCWoMKgUtIRCUirhk5o1REuWinqOpjx8pftiP/qnR7QTM1U1DoS4fBUiHnzmA+Kx4V39ZMpY88QLUOEEFJXpUaovfcohsycSVQoVoSxjR3D/YbEjgmUzSW2Epu73Ya/Uoq4GMf8WBHK7wKp6xsEQdFW2ljKA7RMFU+QFNSILKnqLSK/+ZT2DYdOXP1gV0w5cLBknsK4GZ57XPZvJXs7L5IcmdJ1bGieaJKXJwVbcGHLTgwYkMif5zVGLFWax+U6IzcHPLC+Cv1sTKoH+G1rOMNxMjgfQI5e0+fDlJnrVgfQmgPxsGtAqLd/5FPkSrpT5UuovI9i3tt3vwHo+zmbP0qu+Ej5qh0D4HyKL/WApw2SQrHTITMskChxg1wNE51IOKMdF [...]
            },
            "metadata_fingerprint": "XleZBBspKNM=",
            "name": "vm-linux",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.239.41.35",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/test-339001/global/networks/default",
                "network_ip": "10.128.0.27",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/test-339001/regions/us-central1/subnetworks/default",
                "subnetwork_project": "test-339001"
              }
            ],
            "project": "test-339001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-339001/zones/us-central1-a/instances/vm-linux",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}